package com.example.projetmobile_ecoleenligne.classes;

public enum Grade {
    Nouveau,
    DataScientist,
    Mathematicien,
    ProPython,
    Createur
}
