package com.example.projetmobile_ecoleenligne.classes;

public enum TypeAnnonce {
    NouveauCours,
    NouvelExam,
    MAJ
}
